--- a/index.css
+++ b/index.css
@@ -30,68 +30,71 @@ body{
     color: white;
     font-size: 18px;
     font-weight: 500;
-    display: grid;
-    place-items: center;
-    min-height: 100vh;
-    min-width: 100%;
-    padding: 8.1rem 2.4rem;
+   
 }
 p{
     color: var(--Pale-Blue);
 }
-/* section .activity-tracker{
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-auto-rows: max-content; 
-    grid-template-columns: 1fr;
-} */
-/* .container{
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-auto-rows: max-content;
-    grid-template-columns: 1fr;
-    justify-items: center;
-    gap: 2rem;
-    
-} */
-img{
-    width: 70px;
-    border-radius: 50%;
+     
+
+@media(min-width: 650px){
+    .container-main-box{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2,minmax(100px, auto));
+        grid-gap:20px;
+        max-width: 960px;
+        margin: 2rem auto;
+    }
+    .one{
+        background-color:hsl(235, 46%, 20%);
+        grid-row: 1/3;
+    }
+    .card-header-bottom{
+        background-color: var(--Dark-blue);
+        display: flex;
+        flex-direction: column;
+        padding: 2rem ;
+        justify-content:left;
+        align-items: flex-start;
+        gap: 20px;
+        border-radius: 0 0 15px 15px;
+        
+    }
+    .activity-header{
+        display: flex;
+        justify-content: space-between;
+    }
+
+}
+
+
+
+.activity-bg{
+    display: inline-block;
+}
+
+.activity-bg img{
+    width: 40px;
+    height:40px;
+   
+   
+   
 }
 .card{
     border-radius: 15px;
-    background-color: var(--Dark-blue);
-    
 }
-.container .header{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-}
-
 
 .card-header-top{
     background-color: var(--Blue);
-    border-radius: 15px;
-    padding: 40px;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    justify-content:space-evenly;
-    box-shadow: 20px black;    
+    border-radius: 15px;  
+    padding: 4rem 2rem;
 }
-.card-header-bottom{
-    background-color: var(--Dark-blue);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    padding: 20px;
-    border-radius: 15px;
-    
+.card-header-top img{
+    width: 70px;
+    border-radius: 50%;
 }
+
 .btn{
    font: inherit;
    background: none;
@@ -108,50 +111,37 @@ img{
 
 .activity-traker-activity{
     background-color: var(--Light-red-work);
-    margin-top: 2rem;
-    margin-bottom: 2rem;
     border-radius: 15px;
+    margin: 0;
+    position: relative;
+  
+   
     
+}
+.activity-info{
+    background-color: var(--Dark-blue);
+    border-radius: 15px;
+    cursor: pointer;
+    width: 100%;
+    padding: 20px 20px 50px 20px;
+    position: absolute;
+   
+   
+  
 }
 
 .activity-bg{
     display: grid;
     place-items: start end;
+    
    
 }
-.activity-bg img{
-    position: relative;
-   
-}
-.activity-info{
-    background-color: var(--Dark-blue);
-    position: relative;
-    grid-row: 2/3;
-    grid-column: 2/3;
-    height: 100%;
-    padding: 2.8rem ;
-    border-radius: 15px;
-    padding: 2.8rem 2.4rem;
-    display: flex;
-    flex-flow: column nowrap;
-    gap: 10px; 
-    cursor: pointer;   
-   
-}
+
+
 .activity-info:hover{
     background-color: hsl(236, 37%, 36%);;
 }
-.activity-header, .activity-timeframes{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items:center ;
-    gap: 5rem;
-}
-.activity-timeframes .activity-previous-timeframe{
-    display: flex;
-    flex-direction: row;
-}
+
 .activity-option{
     transition: white 250s;
 }
@@ -161,46 +151,32 @@ img{
 .activity-name{
     font-size: 1.75rem;
     font-weight: 400;
+    
 }
 .activity-current-timeframe{
     font-size: 3rem;
     font-weight: 300;
     color: white;
-    line-height: 4rem;
-}
-.activity-previous-timeframe{
-    font-size: 1.25rem;
-    font-weight: 300;
-    gap: 10px;
+    padding: .50rem 0; 
 }
 
-@media only screen and (min-width: 600px){
-    .container-main-box{
-        display: grid;
-        grid-template-rows: 1fr auto;
-       
-    }
-    
-    .main-container {
-        
-        display: grid;
-        width: 40%;
-        height: 10px
-    } 
-     .activity-traker-activity{
-       margin-bottom: 20px;
-     }
-    
-    .card-header-top{
-        display: flex;
-        flex-direction: column;
-    }
-    .title{
-        margin-top: 2rem;
-        
-    }
-    
+.activity-previous-timeframe{
+    display: inline-flex;
+    gap: 5px;
+    font-size: 1rem;    
 }
+.attribution{
+    text-align: center;
+    padding: 20px auto;
+    margin: 2rem;
+    font-size: .75rem;
+    
+
+}
+
+   
+    
+    
 
 /* @media screen and(min-width:285px) {
 
